--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -10,7 +10,7 @@
         {{/each}}
     </div>
     <div id="sender_conainer">
-        <textarea type="text" id="message_input" rows="3"></textarea>
+        <textarea type="text" id="message_input" rows="3" maxlength="350"></textarea>
     </div>
 </div>
 
